# Visionary

./: README.md  pyproject.toml  requirements.txt
src/client/: config.py  main.py
src/client/api/: __init__.py  api.py
src/client/exitInterceptor/: onExitInterceptor.py
src/client/hooks/: __init__.py  hijackerHook.py
src/client/logs/: hijacker.log.2025-09-15
src/client/process/: __init__.py  process.py
src/server/: manage.py
src/server/api/: urls.py
src/server/api/views/: __init__.py  views.py
src/server/server/: settings.py  urls.py
