[project]
name = "visionary"
version = "0.1.0"
description = ""
authors = [
    {name = "Navid",email = "navidyaghmaei1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)",
    "pywin32 (>=311,<312)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "django (>=5.2.6,<6.0.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
